# AlteryxGalleryAPI

./: .env.example  .gitignore  AlteryxGalleryAPI.py  MANIFEST.in  README.md  alteryx_gallery_api.py  alteryx_gallery_api_v3_compatible.py  logging.conf  not_the_setup.py.old  pyproject.toml  scratch.py  setup copy.cfg.old  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
AlteryxGalleryAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/AlteryxGallery/: AlteryxGalleryAPI.py  AlteryxGalleryAPI.py.old
src/AlteryxGallery/tests/: test.py
src/AlteryxGalleryAPI.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
src/alteryx_gallery_api.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: test_gallery_connection.py
tests/: test_gallery_connection.py
