[tool.poetry]
name = "alteryxgalleryapi"
version = "0.1.0"
description = "An API for connecting to an Alteryx Gallery. Forked from the project by DAVID PRYOR, NICK SIMMONS, AND RITU GOWLIKAR"
authors = ["Paul Houghton <paul.houghton@theinformationlab.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "AlteryxGallery", from = "src" },
]
repository = "https://github.com/Sivivatu/AlteryxGalleryAPI"
keywords = ["Alteryx Server", "Atleryx Gallery", "API", "Alteryx Gallery API", "Alteryx Server API", "Alteryx API"]

[tool.poetry.urls]
"API Documentation" = "https://help.alteryx.com/current/en/server/api-overview/alteryx-server-api-v3.html"
"Bug Tracker" = "https://github.com/Sivivatu/AlteryxGalleryAPI/issues"


[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
